Checking in all things video (and some things graphics). "Insert Video" is a separate menu item now; and I've gone back to using <embed> tags rather than <object> for video, as I was never able to get an inserted video <object> to appear without saving and reloading the document (hopefully this can get resolved). Video properties don't, however, seem to take effect if they're modified after the video is inserted; also, spaces in pathnames are still a no-no for typesetting. You'll need the movie15 LaTeX package, which we'll be adding to our installation. Finally, when looking at the PDF output in Prince's window, you'll have to allow the video to run with dialogs and stuff and then double-click it to start it - this is permissions-related stuff which I hope we can sort out.

--- a/prince/base/locale/en-us/dialogs/msiEditorImageProperties.dtd
+++ b/prince/base/locale/en-us/dialogs/msiEditorImageProperties.dtd
@@ -39,6 +39,7 @@
 
 <!-- Window title -->
 <!ENTITY windowTitle.label "Image">
+<!ENTITY videoTitle.label "Video">
 
 <!ENTITY pixelsPopup.value "pixels">
 <!ENTITY percentPopup.value "percent">
@@ -137,4 +138,23 @@
 
 <!ENTITY imageKey.label "Key">
 <!ENTITY captionPlacement.label "Caption Placement">
-                    
+
+<!ENTITY videoTab.label "Video properties">
+<!ENTITY videoShowControls.label "Show video controls">
+<!ENTITY videoShowControls.accesskey "w">
+<!ENTITY videoAutoplay.label "Autoplay">
+<!ENTITY videoAutoplay.accesskey "y">
+<!ENTITY videoLooping.label "Looping">
+<!ENTITY videoLooping.accesskey "l">
+<!ENTITY videoRepeatOnce.label "Play once">
+<!ENTITY videoRepeatLoop.label "Loop">
+<!ENTITY videoRepeatPalindrome.label "Back and forth">
+<!ENTITY videoStartAtBeginning.label "Play from beginning">
+<!ENTITY videoStartAtBeginning.accesskey "s">
+<!ENTITY videoStartAt.label "Start at:">
+<!ENTITY videoEndAtEnding.label "Play to end">
+<!ENTITY videoEndAt.label "End at:">
+<!ENTITY videoStartEndMinutes.label "m">
+<!ENTITY videoStartEndSeconds.label "s">
+<!ENTITY videoStartEndFrames.label "frame">
+
