--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -44,6 +44,7 @@ OpenXMLFile=Open Tag Definition File
 OpenXSLFile=Open Transformation File
 OpenCLSFile=Open LaTeX Style File
 SelectImageFile=Select Image File
+SelectVideoFile=Select Video File
 SaveDocument=Save Document
 SaveDocumentAs=Save Document As
 ExportToText=Export to Text
@@ -70,6 +71,7 @@ XHTMLFiles=XHTML Files
 IMGFiles=Image Files
 TextFiles=Text Files
 TeXFiles=TeX Files
+VideoFiles=Video Files
 AllFiles=All Files
 BeforeClosing=before closing
 BeforePreview=before viewing in Navigator
@@ -166,6 +168,7 @@ NestedTable=Nested Table
 HLine=Horizontal Line
 Link=Link
 Image=Image
+Video=Video
 ImageAndLink=Image and Link
 NamedAnchor=Named Anchor
 List=List
