More effort on text in math, index

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -116,6 +116,9 @@
 \MSITeXButton{hfill}
 \MSITeXButton{vfil}
 \MSITeXButton{vfill}
+\MSITeXButton{makebox}
+\MSITeXButton{columnwidth}
+
 
 
 \MSITeXButtonEnvironment{minipage}
@@ -424,8 +427,6 @@
 \MSIEqnarrayLikeEnvironment{align*}
 \MSIEqnarrayLikeEnvironment{gather}
 \MSIEqnarrayLikeEnvironment{gather*}
-
-
 
 \MSISplitLikeEnvironment{cases}
 
