Added CopyAsPicture and SaveAsPicture interface and functionality. The SVG stuff is not yet available because of compiler flags (and this code will need finishing once the compiler flags are working), but much of the rest is working now. (Also need to fix a bug with math object backgrounds showing as selected.) Also fixed a bug in pasting pictures regardless of their origin.

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -71,6 +71,10 @@ XHTMLFiles=XHTML Files
 IMGFiles=Image Files
 TextFiles=Text Files
 TeXFiles=TeX Files
+SavePictureAs=Save Image As
+SaveImageAsDesc_png=Portable Network Graphic
+SaveImageAsDesc_pdf=Adobe PDF Graphic
+SaveImageAsDesc_jpg=JPEG Graphic
 VideoFiles=Video Files
 AllFiles=All Files
 BeforeClosing=before closing
