Added menu accelerators for Copy as Picture and Export Selection as Picture.

--- a/prince/base/locale/en-us/menuOverlay.dtd
+++ b/prince/base/locale/en-us/menuOverlay.dtd
@@ -99,9 +99,11 @@
 <!ENTITY copyCmd.accel						"C">  
 <!ENTITY copyCmd.accesskey					"c"> 
 <!ENTITY copyCmd.acceltext					"Ctrl+C">
-<!ENTITY copytexCmd.label					"Copy as TeX">  
-<!ENTITY copypictureCmd.label			"Copy as Picture">
+<!ENTITY copytexCmd.label					 "Copy as TeX">  
+<!ENTITY copypictureCmd.label			 "Copy as Picture">
+<!ENTITY copypictureCmd.accesskey	 "i">
 <!ENTITY savepictureCmd.label			"Export Selection as Picture">
+<!ENTITY savepictureCmd.accesskey	"x">
 <!ENTITY pasteCmd.label						"Paste">  
 <!ENTITY pasteCmd.key						"V">  
 <!ENTITY pasteCmd.accesskey					"p"> 
