Another try at fixing bitmap copy-as images. Also added Windows metafile generation for export-as-picture, but no text appears in these metafiles(!). Saving working code off to try a couple of fixes for that; otherwise we won't be able to do the Windows metafile copy-as-picture.

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -75,6 +75,8 @@ SavePictureAs=Save Image As
 SaveImageAsDesc_png=Portable Network Graphic
 SaveImageAsDesc_pdf=Adobe PDF Graphic
 SaveImageAsDesc_jpg=JPEG Graphic
+SaveImageAsDesc_svg=Scalable Vector Graphics
+SaveImageAsDesc_emf=Windows Enhanced MetaFile
 VideoFiles=Video Files
 AllFiles=All Files
 BeforeClosing=before closing
