More work on copy-as-picture, particularly to try to get WMF metafiles to work. Abandoning this for now - most of the added stuff is commented out for possible recovery later.

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -77,6 +77,7 @@ SaveImageAsDesc_pdf=Adobe PDF Graphic
 SaveImageAsDesc_jpg=JPEG Graphic
 SaveImageAsDesc_svg=Scalable Vector Graphics
 SaveImageAsDesc_emf=Windows Enhanced MetaFile
+SaveImageAsDesc_wmf=Windows MetaFile Picture
 VideoFiles=Video Files
 AllFiles=All Files
 BeforeClosing=before closing
