Miscellaneous small changes

--- a/prince/base/locale/en-us/editor.dtd
+++ b/prince/base/locale/en-us/editor.dtd
@@ -11,6 +11,7 @@
 <!ENTITY formatmenu.accesskey "o">
 
 <!ENTITY helpMenu.label "Help">
+<!ENTITY helpMenu.accesskey "H">
 <!ENTITY aboutCmd.label ".About">
 
 <!-- Display Mode Toolbar -->
