--- a/prince/base/locale/en-us/compute.properties
+++ b/prince/base/locale/en-us/compute.properties
@@ -82,7 +82,7 @@ NoSolution=<span>, No Solution found.</span>
 Solution.fmt=, Solution: %result%
 CheckEquality.fmt= is %result%
 Roots.fmt= roots: %result%
-DoesNotExist= does not exist. 
+DoesNotExist=, scalar potential does not exist. 
 #
 Companion.fmt=, Companion: %result%
 Fourier.fmt=, Fourier Transform is: %result%
