A simple change mostly to test new mercurial repo

--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -3336,8 +3336,8 @@
    \catcode`\<=\active
    \catcode`\>=\active
    \gdef&{\msitag{<amp/>}}
-   \gdef<{\msitag{<langle/>}}
-   \gdef>{\msitag{<rangle/>}}
+   \gdef<{\msitag{&lt;}}
+   \gdef>{\msitag{&gt;}}
 \egroup
 
 
