Enabled the rest of HTML Field, bug 1811

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -196,6 +196,8 @@ BibEntry=Bibliography Entry
 opentypefont=Opentype Font
 fontcolor=Font Color
 fontsize=Font Size
+rawtex=Raw TeX
+htmlfield=HTML Field
 note=Note
 CrossRef=Cross Reference
 functiongraph=Function Graph
