A number of plot fixes - many things fixed, though there are still bugs. In particular, the revise dialog now works for the most part, including tube and approximate integral plots. The Variables and Animation subdialog is buggy, though it now works somewhat. Also managed to keep the VCam object alive after revising in the dialog, though I've seen this fail as well (not sure what else could go on). Finally, a fix to a bug that prevented successfully saving any document, at least if it contained plots.

--- a/prince/base/locale/en-us/compute.properties
+++ b/prince/base/locale/en-us/compute.properties
@@ -67,6 +67,21 @@ PowerSeries.termsdefault=<math xmlns=\"http://www.w3.org/1998/Math/MathML\"><mn>
 #####Quantile dialog
 Quantile.title=Statistics Quantile
 Quantile.label=Which Quantile:
+#####IntervalsAndAnimation dialog
+Intervals.XVar=x
+Intervals.YVar=y
+Intervals.ZVar=z
+Intervals.AnimVar=Animation variable
+Intervals.polarXVar=theta
+Intervals.polarYVar=r
+Intervals.cyiindricalXVar=theta
+Intervals.cyiindricalYVar=z
+Intervals.cyiindricalZVar=r
+Intervals.sphericalXVar=theta
+Intervals.sphericalYVar=phi
+Intervals.sphericalZVar=rho
+intervals.parametricXVar=u (parametric variable)
+intervals.parametricYVar=v (parametric variable) 
 #
 #####Error stuff
 Error.title=ComputeOverlay Error
