More plot bug fixes. In particular, finally have VCam functional most (hopefully all?) of the time when it should be. (Includes some commented code that should be removed, but I wanted to check in in case it's useful later.)

--- a/prince/base/locale/en-us/dialogs/plotAnimationSettings.dtd
+++ b/prince/base/locale/en-us/dialogs/plotAnimationSettings.dtd
@@ -3,4 +3,5 @@
 <!ENTITY windowTitle.label "Plot Animation Settings">
 <!ENTITY animStartSeconds.label "Animation start time (seconds)">
 <!ENTITY animEndSeconds.label "Animation end time (seconds)">
+<!ENTITY animCurrTimeSeconds.label "Current animation time (seconds)">
 <!ENTITY animFramesPerSecond.label "Frames per second">
