--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -814,6 +814,10 @@
 \@namedef{msi@begin@equation*}{\bgroup\msi@dollar=0\relax$$\string\begin{equation*}}
 \@namedef{msi@end@equation*}{\string\end{equation*}$$\egroup}
 
+\@namedef{msi@begin@displaymath}{\bgroup\msi@dollar=0\relax$$\string\begin{equation*}}
+\@namedef{msi@end@displaymath}{\string\end{equation*}$$\egroup}
+
+
 
 
 \def\msi@begin@array{\begingroup\def\\{\char`\\\char`\\}\catcode`\&=12\string\begin{array}}
