--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1201,7 +1201,7 @@
   \ifmmode
     \char`\\\char`\ %
   \else
-    \msihmode{ }%
+    \msihmode\msitag{<hspace type="requiredSpace" dim="1em"/>}%
   \fi}
 
 \def~{%
