--- a/filters/ptprince/tex.tex
+++ b/filters/ptprince/tex.tex
@@ -18303,7 +18303,7 @@ char *upref_zstrs[] = {
   "<mml:math class=\"inlinemathml\" display=\"inline\">",
   "mml:",                         //  U8* namespace_prefix;
   "fontfamily=\"Times New Roman\" fontsize=\"120%\"",   //  U8* mstyle_attrs;
-  "mathcolor=\"gray\"",           //  U8* mathname_attrs;
+  "msimathname=\"true\"",         //  U8* mathname_attrs;
   "mathcolor=\"green\"",          //  U8* unitname_attrs;
   "mathcolor=\"black\"",          //  U8* text_in_math_attrs;
   "mathcolor=\"green\"",          //  U8* link_attrs;
