--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -3351,6 +3351,7 @@
    \catcode`\#=12
    \catcode`\$=12
    \catcode`\^=12
+   \catcode`\~=12
    \catcode`\_=12
    \catcode`\&=\active
    \catcode`\<=\active
