Made it so deleting non-empty front matter tags will delete only the contents of the tag, not the tag itself. This means that the front matter button will remain. Most of the work was in msiEditRules, but changes in msiTagManager propagated through many files.

--- a/prince/base/locale/en-us/menuOverlay.dtd
+++ b/prince/base/locale/en-us/menuOverlay.dtd
@@ -86,6 +86,7 @@
 <!ENTITY exitCmd.label "Quit">
 <!ENTITY fileexit.accesskey "q">
 <!ENTITY fileexit.keybinding "q">
+<!ENTITY fileexit.acceltext  "Cmd+Q">
 #endif
 
 <!-- Edit menu items -->
