Added transparent colors for 3D plots and plot labels, together with font settings for the labels, axes, and axes ticks. Fixed a number of remaining plot bugs, though not yet all - but many more things should now work.

--- a/editor/ui/locales/en-US/chrome/dialogs/EdColorPicker.dtd
+++ b/editor/ui/locales/en-US/chrome/dialogs/EdColorPicker.dtd
@@ -53,3 +53,5 @@
 <!ENTITY table.accesskey "T">
 <!ENTITY cell.label "Cell(s)">
 <!ENTITY cell.accesskey "C">
+<!ENTITY transparency.label "Transparency">
+<!ENTITY transparency.accesskey "y">
