--- a/prince/base/locale/en-us/compute.properties
+++ b/prince/base/locale/en-us/compute.properties
@@ -82,6 +82,14 @@ Intervals.sphericalYVar=phi
 Intervals.sphericalZVar=rho
 intervals.parametricXVar=u (parametric variable)
 intervals.parametricYVar=v (parametric variable) 
+####plotFontSettings dialog
+plotFontDlg.axesFont.windowTitle=Font for Plot Axes Labels
+plotFontDlg.axesFont.faceDefault=Use engine default face
+plotFontDlg.axesFont.sizeDefault=Use engine default size
+plotFontDlg.axesFont.colorDefault=Use engine default color
+plotFontDlg.axesFont.styleDefault=Use engine default style
+plotFontDlg.axesTicksFont.windowTitle=Font for Plot Axes Tick Labels
+plotFontDlg.axesTicksFont.sizeDefault=Use 4/5 of axes font size
 #
 #####Error stuff
 Error.title=ComputeOverlay Error
